--- a/Assets/style.css
+++ b/Assets/style.css
@@ -139,7 +139,7 @@ button {
     flex-grow: 1;
     /*Gets rid of underline when I anchor links to the button*/
     text-decoration: none;
-    font-size: 16px;
+    font-size: 2.5rem;
 }
 
 button:hover,
