--- a/Assets/style.css
+++ b/Assets/style.css
@@ -245,14 +245,15 @@ button:focus {
 /*Desktop layout*/
 @media screen and (min-width: 992px) {
     #other-projects {
+        /*This establishes a grid system for the projects below the first one with 4 columns on screens with 768px to 992 px width. The rows will automatically form.*/
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
         gap: 0.2rem;
         /* flex-shrink: 1; */
     }
 
     #second {
+        /* This makes project 2 start on row 1 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 1 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -261,6 +262,7 @@ button:focus {
     }
 
     #third {
+        /* This makes project 3 start on row 1 and column 2, and take up/span 1 row and 1 column. */
         grid-area: 1 / 2 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -270,6 +272,7 @@ button:focus {
 
 
     #fourth {
+        /* This makes project 4 start on row 1 and column 3, and take up/span 1 row and 1 column. */
         grid-area: 1 / 3 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -278,6 +281,7 @@ button:focus {
     }
 
     #fifth {
+        /* This makes project 5 start on row 1 and column 4, and take up/span 1 row and 1 column. */
         grid-area: 1 / 4 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -290,12 +294,14 @@ button:focus {
 /*Tablet layout*/
 @media screen and (min-width: 768px) and (max-width: 992px) {
     #other-projects {
+        /*This establishes a grid system for the projects below the first one with 2 columns on screens with 768px to 992 px width. The rows will automatically form.*/
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 0.2rem;
     }
 
     #second {
+        /* This makes project 2 start on row 1 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 1 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -304,6 +310,7 @@ button:focus {
     }
 
     #third {
+        /* This makes project 3 start on row 1 and column 2, and take up/span 1 row and 1 column. */
         grid-area: 1 / 2 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -313,6 +320,7 @@ button:focus {
 
 
     #fourth {
+        /* This makes project 4 start on row 2 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 2 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -321,6 +329,7 @@ button:focus {
     }
 
     #fifth {
+        /* This makes project 5 start on row 2 and column 2, and take up/span 1 row and 1 column. */
         grid-area: 2 / 2 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -332,12 +341,14 @@ button:focus {
 /*Phone layout*/
 @media screen and (max-width: 768px) {
     #other-projects {
+        /*This establishes a grid system for the projects below the first one, with 1 column on screens with 768px width or less. The rows will automatically form.*/
         display: grid;
         grid-template-columns: 1fr;
         gap: 0.2rem;
     }
 
     #second {
+        /* This makes project 5 start on row 1 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 1 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -346,6 +357,7 @@ button:focus {
     }
 
     #third {
+        /* This makes project 5 start on row 2 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 2 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -355,6 +367,7 @@ button:focus {
 
 
     #fourth {
+        /* This makes project 5 start on row 3 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 3 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -363,6 +376,7 @@ button:focus {
     }
 
     #fifth {
+        /* This makes project 5 start on row 4 and column 1, and take up/span 1 row and 1 column. */
         grid-area: 4 / 1 / span 1 / span 1;
         display: flex;
         flex-direction: column;
@@ -378,9 +392,10 @@ button:focus {
     text-align: center;
 }
 
-
-/*Contact Me Section - Tablets and phones*/
+/*Contact Me Section Responsiveness - Tablets and phones*/
 @media screen and (max-width: 992px) {
+
+    /*This changes the Contact Me section from a row to a column, with the text aligned to the left rather than in the center.*/
     #contact>ul {
         display: flex;
         flex-direction: column;
