--- a/Assets/style.css
+++ b/Assets/style.css
@@ -218,9 +218,6 @@ button:focus {
 }
 
 #project-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     text-align: center;
 }
 
@@ -387,8 +384,6 @@ button:focus {
 
 /*Contact Me Section Formatting*/
 #contact-header {
-    display: flex;
-    justify-content: center;
     text-align: center;
 }
 
@@ -403,15 +398,7 @@ button:focus {
         text-align: left;
     }
 
-    #email {
-        display: flex;
-    }
-
-    #github {
-        display: flex;
-    }
-
-    #linkedin {
+    .links {
         display: flex;
     }
 }
