--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -77,6 +77,7 @@ li {
 
 
 /*Home Section formatting*/
+/*Please see README for keyframe code credits.*/
 @keyframes home {
 
     /*Starts the text "Hi, my name is Claire. Nice to meet you!" text off screen to the left before you load.*/
